Fix some dark theme missing colors and bugs

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -3,6 +3,9 @@
     --color-background: #fff; // Background color
     --color-foreground: #000; // Text color
     --color-foreground-subtext: #666; // Text color for secondary text
+    --color-status-placeholder: var(--color-foreground-subtext); // Placeholder text color (e.g. loading)
+    --color-status-error: #ff1b02; // Color for error fallback text
+    --color-status-success: #00b300; // Color for success fallback text
 
     // Login screen
     --color-login-background: #f5f5f5; // Login background color (around the box)
@@ -59,6 +62,9 @@
         --color-background: rgb(19, 19, 19); // Background color
         --color-foreground: #fff; // Text color
         --color-foreground-subtext: rgb(163, 163, 163); // Text color for secondary text
+        --color-status-placeholder: rgb(95, 95, 95); // Placeholder text color (e.g. loading)
+        --color-status-error: #ff1b02; // Color for error fallback text
+        --color-status-success: #00b300; // Color for success fallback text
 
         // Login screen
         --color-login-background: #151515; // Login background color (around the box)
