--- a/src/ui/form.scss
+++ b/src/ui/form.scss
@@ -12,8 +12,17 @@ label {
         border-radius: 7px;
         border: 1px solid var(--color-input-border);
         box-shadow: 0 0 0 0 transparent;
-        transition: box-shadow 200ms, border-color 200ms;
         font-size: 16px;
+        color: var(--color-foreground);
+        transition: box-shadow 200ms, border-color 200ms;
+        
+        &:-webkit-autofill,
+        &:-webkit-autofill:hover, 
+        &:-webkit-autofill:focus, 
+        &:-webkit-autofill:active{
+            transition: background-color 999999s, color 999999s, // Prevent Chrome from filling the input with the autofill color by setting a very long transition (999999s= 11.5 days)
+                box-shadow 200ms, border-color 200ms; // The usual transitions
+        }
 
         &:focus {
             border-color: transparent;
@@ -57,7 +66,7 @@ input[type=submit] {
     border-radius: 7px;
     background-color: var(--color-button-primary);
     border: none;
-    color: #ffffff;
+    color: var(--color-button-primary-text);
     font-size: 19px;
     cursor: pointer;
     transition: opacity 200ms;
