--- a/src/ui/notifications.scss
+++ b/src/ui/notifications.scss
@@ -27,6 +27,7 @@
             border: none;
             background: none;
             padding: 5px;
+            color: inherit;
             transition: transform 200ms, color 200ms;
 
             &:hover {
